kubernetes/jabeh/04-03-ingress-cdn.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/proxy-body-size: 32m
  name: jabeh-cdn-ingress
  namespace: jabeh
spec:
  rules:
  - host: frcdn.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: ircdn.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
  - host: cdn.jabeh.com
    http:
      paths:
      - backend:
          serviceName: jabeh-cdn-master-service
          servicePort: 80
        path: /
